--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "antd": "^5.20.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.414.0",
@@ -36,7 +37,8 @@
     "shake.js": "^1.2.2",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "vou-brand": "file:"
   },
   "devDependencies": {
     "@types/node": "^20.14.12",
