--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.13.1",
     "lucide-react": "^0.414.0",
+    "moment": "^2.30.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
