--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.16.5",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "antd": "^5.20.0",
     "axios": "^1.7.7",
